--- a/css/helpers/_mixins.scss
+++ b/css/helpers/_mixins.scss
@@ -38,7 +38,10 @@
   right:     $right;
 }
 
-@mixin transition ($a:all) {
-	transition:   $a 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+@mixin transition ($a...) {
+  @if length($a) == 0 { $a: all }
+	transition-property:   $a;
+  transition-duration: 0.6s;
+  transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
   will-change:  $a;
 }
