--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,20 @@ p {
   margin-top: 10px;
 }
 
+.nav-link-container {
+  display: flex;
+  flex-direction: row;
+  min-width: 300px;
+}
+
+.nav-link-container:first-of-type {
+  justify-content: flex-end;
+}
+
+.nav-link-container:last-of-type {
+  justify-content: flex-start;
+}
+
 .logo {
   display: none;
   z-index: 99;
