footer elements and styleing adjusted

--- a/css/helpers/_variables.scss
+++ b/css/helpers/_variables.scss
@@ -12,3 +12,4 @@ $white   : white;
 $logoDia          :  150px;
 $productHeight    :  calc(100vh - 50pt - #{$logoDia});
 $altProductHeight :  calc(100vh - (#{$logoDia} * 1.5));
+$navBar           :  60pt;
