--- a/css/modules/_home.scss
+++ b/css/modules/_home.scss
@@ -18,7 +18,8 @@
 }
 
 .about {
-  margin: 30px auto 60px auto;
+  margin: 30px auto 0 auto;
+  padding-bottom: 50px;
   max-width: 980px;
 
   img {
