--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,25 @@ p {
   color: #0f1308;
 }
 
+.contact-slider {
+  width: 100%;
+  height: 75vh;
+  background-color: #637d37;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  position: fixed;
+  bottom: -75vh;
+  left: 0;
+  transition-property: all;
+  transition-duration: 0.6s;
+  transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+  will-change: all;
+}
+
+.slide {
+  transform: translateY(-75vh);
+}
+
 .hero {
   height: 500px;
   display: flex;
