--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body {
   line-height: 1.5rem;
   margin-bottom: 50pt;
   background-color: white;
+  overflow-y: hidden;
 }
 
 @media only screen and (min-width: 800px) {
@@ -237,25 +238,6 @@ p {
   color: #0f1308;
 }
 
-.contact-slider {
-  width: 100%;
-  height: 75vh;
-  background-color: #637d37;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  position: fixed;
-  bottom: -75vh;
-  left: 0;
-  transition-property: all;
-  transition-duration: 0.6s;
-  transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
-  will-change: all;
-}
-
-.slide {
-  transform: translateY(-75vh);
-}
-
 .hero {
   height: 500px;
   display: flex;
@@ -433,6 +415,67 @@ p {
 
 .show {
   display: inherit;
+}
+
+.slider-contact {
+  width: 100%;
+  height: 75vh;
+  background-color: #637d37;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  position: fixed;
+  bottom: -75vh;
+  left: 0;
+  transition-property: all;
+  transition-duration: 0.6s;
+  transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+  will-change: all;
+  padding: 20px;
+  padding-top: 40px;
+  text-transform: none;
+  font-size: 1rem;
+}
+
+.slider-address {
+  font-style: normal;
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 150px;
+}
+
+.slider-address-image {
+  width: 150px;
+  height: auto;
+  background-color: #d4d5d6;
+  border-radius: 50%;
+}
+
+.slider-address-info {
+  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.slide {
+  transform: translateY(-75vh);
+}
+
+.exit {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  transition-property: color;
+  transition-duration: 0.6s;
+  transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+  will-change: color;
+}
+
+.exit:hover, .exit:active {
+  color: #0f1308;
 }
 
 footer {
