--- a/css/style.scss
+++ b/css/style.scss
@@ -24,6 +24,7 @@ body {
   line-height: 1.5rem;
   margin-bottom   : 50pt;
   background-color: $white;
+  overflow-y: hidden;
 
   @include min800 {
     margin-bottom: auto;
