--- a/css/modules/_productItem.scss
+++ b/css/modules/_productItem.scss
@@ -21,6 +21,7 @@
 
 .product-list {
   width: 100%;
+  padding-bottom: 50px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 20px;
