--- a/css/modules/_contact.scss
+++ b/css/modules/_contact.scss
@@ -55,3 +55,15 @@
     color: $black;
   }
 }
+
+.contact-form {
+  padding-top: 150px;
+}
+
+#map {
+  height     : 500px ;
+  overflow   : hidden;
+  max-height : 75vw  ;
+  @include full-page ;
+  background-color: $grey40;
+}
