--- a/css/modules/_contact.scss
+++ b/css/modules/_contact.scss
@@ -57,7 +57,32 @@
 }
 
 .contact-form {
-  padding-top: 150px;
+  padding-top: 50px;
+  display: flex;
+  flex-direction: column;
+}
+
+input, textarea {
+  font-size: 1rem;
+  padding: 5px;
+  margin: 10px 0;
+  border: 1px solid $grey40;
+}
+
+textarea {
+  min-height: 100px;
+  max-width: 100%;
+}
+
+button {
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 5px;
+  margin: 10px 0;
+  @include size(100px, 50px);
+  border-radius: 25px;
+  background-color: $grey40;
+  border: none;
 }
 
 #map {
