--- a/css/style.css
+++ b/css/style.css
@@ -543,7 +543,33 @@ p {
 }
 
 .contact-form {
-  padding-top: 150px;
+  padding-top: 50px;
+  display: flex;
+  flex-direction: column;
+}
+
+input, textarea {
+  font-size: 1rem;
+  padding: 5px;
+  margin: 10px 0;
+  border: 1px solid #d4d5d6;
+}
+
+textarea {
+  min-height: 100px;
+  max-width: 100%;
+}
+
+button {
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 5px;
+  margin: 10px 0;
+  width: 100px;
+  height: 50px;
+  border-radius: 25px;
+  background-color: #d4d5d6;
+  border: none;
 }
 
 #map {
