--- a/css/style.scss
+++ b/css/style.scss
@@ -14,6 +14,8 @@
   box-sizing: border-box;
   text-decoration: none;
   list-style-type: none;
+
+  font-style : normal;
   font-family: 'neutraText', sans-serif;
 }
 
