--- a/css/style.css
+++ b/css/style.css
@@ -458,7 +458,7 @@ p {
 
 .images-list div.landscape {
   grid-column-end: span 2;
-  max-height: 250px;
+  height: 250px;
 }
 
 @media only screen and (max-width: 600px) {
