--- a/css/style.scss
+++ b/css/style.scss
@@ -24,12 +24,15 @@ body {
   margin     : auto;
   font-size  : 16px;
   line-height: 1.5rem;
-  margin-bottom   : 50pt;
+  // margin-bottom   : 50pt;
   background-color: $white;
   // overflow-y: hidden;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 
   @include min800 {
-    margin-bottom: auto;
+    // margin-bottom: auto;
   }
 }
 
@@ -40,7 +43,9 @@ p {
 }
 
 #main {
-  margin-bottom: $navBar;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 //modules
