--- a/css/modules/_images.scss
+++ b/css/modules/_images.scss
@@ -9,7 +9,7 @@
     color: $green;
     text-transform: uppercase;
     @include min800 {
-      margin-top: $logoDia + 50px;
+      margin-top: $logoDia;
     }
     p {
       text-transform: none;
