--- a/css/helpers/_variables.scss
+++ b/css/helpers/_variables.scss
@@ -1,12 +1,15 @@
 // main:../style.scss
 // colors
 $yellow  : #dece25;
+
 $green   : #637d37;
 $green40 : lighten($green, 40);
-$grey    : #6D6E71;
-$grey40  : lighten($grey, 40);
+$green80 : darken($green, 20);
 $black   : darken($green, 30);
-$white   : white;
+
+$grey    : desaturate($green, 99%);
+$grey50  : lighten($grey, 50);
+$white   : lighten($grey, 99);
 
 // dimensions
 $logoDia          :  150px;
