--- a/css/modules/_header.scss
+++ b/css/modules/_header.scss
@@ -9,7 +9,7 @@
   text-transform  : uppercase;
   background-color: $green;
   box-shadow      : 0 -1px 10px -5px $black;
-  font: bold .75rem/normal 'neutraText', sans-serif;
+  font: bold 0.75rem/normal 'neutraText', sans-serif;
 
   @include min800 {
     top       : 30px;
@@ -19,7 +19,7 @@
     box-shadow: initial;
     height    : $logoDia / 2;
     [class*="entypo-"] {display: none}
-    box-shadow: 0 1px 10px -5px $black;
+    box-shadow: 0 3px 3px 0px rgba(0,0,0,0.1);
     @include transition(transform);
   }
 }
@@ -55,7 +55,7 @@
     right: 0;
     border-radius: 0;
     @include size(100%, 30px);
-    background-color: $grey40;
+    background-color: $grey50;
     text-transform: inherit;
     font-size: .8rem;
     justify-content: flex-end;
@@ -103,9 +103,10 @@
       margin: 0 20px;
     }
     &:hover, &:active {
-      color: $black;
+      color: $green80;
     }
     span {
+      line-height: 1.5;
       margin-top: 10px;
     }
 
@@ -132,12 +133,27 @@
   border-radius: 50%;
   align-self   : flex-start;
   background   : $white;
+  position: relative;
   @include transition;
 
   svg { width: 100%}
 
   @include min800 {
     display: inherit;
+  }
+
+  &:before{
+    @include transition(opacity);
+    transition-delay: 200ms;
+    content: '';
+    width: 100%;
+    height: 50%;
+    left: 0.5px;
+    top:50%;
+    box-shadow: 0 -2px 14px 2px rgba(0,0,0,0.2);
+    position: absolute;
+    border-radius: 0 0 40pc 40pc;
+    z-index: -1;
   }
 }
 
@@ -146,6 +162,10 @@
   background: transparent;
   svg > *{ opacity: 0 }
   .cls-2 {opacity: 1  }
+  &:before{
+    transition: none;
+    transform: translateY(-300px);
+    opacity: 0!important}
 }
 
 .on-page {
