--- a/css/style.css
+++ b/css/style.css
@@ -19,10 +19,18 @@ body {
   margin: auto;
   font-size: 16px;
   line-height: 1.5rem;
+  margin-bottom: 50pt;
   background-color: white;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: calc(100vh - 100px);
+}
+
+@media only screen and (min-width: 800px) {
+  body {
+    margin-top: 105px;
+    margin-bottom: 0;
+  }
 }
 
 p {
@@ -48,7 +56,7 @@ p {
   text-transform: uppercase;
   background-color: #637d37;
   box-shadow: 0 -1px 10px -5px #0f1308;
-  font: bold .75rem/normal 'neutraText', sans-serif;
+  font: bold 0.75rem/normal 'neutraText', sans-serif;
 }
 
 @media only screen and (min-width: 800px) {
@@ -59,7 +67,7 @@ p {
     background: white;
     box-shadow: initial;
     height: 75px;
-    box-shadow: 0 1px 10px -5px #0f1308;
+    box-shadow: 0 3px 3px 0px rgba(0, 0, 0, 0.1);
     transition-property: transform;
     transition-duration: 0.6s;
     transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
@@ -111,7 +119,7 @@ p {
     border-radius: 0;
     width: 100%;
     height: 30px;
-    background-color: #d4d5d6;
+    background-color: #dadada;
     text-transform: inherit;
     font-size: .8rem;
     justify-content: flex-end;
@@ -173,10 +181,11 @@ p {
 }
 
 .nav-link:hover, .nav-link:active {
-  color: #0f1308;
+  color: #2b3618;
 }
 
 .nav-link span {
+  line-height: 1.5;
   margin-top: 10px;
 }
 
@@ -203,6 +212,7 @@ p {
   border-radius: 50%;
   align-self: flex-start;
   background: white;
+  position: relative;
   transition-property: all;
   transition-duration: 0.6s;
   transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
@@ -219,6 +229,23 @@ p {
   }
 }
 
+.logo:before {
+  transition-property: opacity;
+  transition-duration: 0.6s;
+  transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+  will-change: opacity;
+  transition-delay: 200ms;
+  content: '';
+  width: 100%;
+  height: 50%;
+  left: 0.5px;
+  top: 50%;
+  box-shadow: 0 -2px 14px 2px rgba(0, 0, 0, 0.2);
+  position: absolute;
+  border-radius: 0 0 40pc 40pc;
+  z-index: -1;
+}
+
 .scroll-logo {
   transform: translateY(-70px);
   background: transparent;
@@ -230,6 +257,12 @@ p {
 
 .scroll-logo .cls-2 {
   opacity: 1;
+}
+
+.scroll-logo:before {
+  transition: none;
+  transform: translateY(-300px);
+  opacity: 0 !important;
 }
 
 .on-page {
@@ -245,7 +278,7 @@ p {
   width: 100vw;
   margin: 0 -10vw;
   justify-content: center;
-  background-color: #d4d5d6;
+  background-color: #dadada;
 }
 
 .hero img {
@@ -261,7 +294,8 @@ p {
 }
 
 .about img {
-  max-height: 150px;
+  max-height: 100px;
+  margin-top: 20px;
 }
 
 .intro {
@@ -308,8 +342,7 @@ p {
   .products {
     width: 100%;
     flex-direction: row;
-    margin-top: 75px;
-    margin-bottom: inherit;
+    margin-bottom: 0;
     justify-content: center;
   }
 }
@@ -348,8 +381,8 @@ p {
 
 @media only screen and (min-width: 800px) {
   .products [class*="svg-"] {
-    width: calc((80vw - 60px)/3);
-    height: calc((80vw - 60px)/3);
+    width: calc((70vw - 60px)/3);
+    height: calc((70vw - 60px)/3);
   }
 }
 
@@ -430,7 +463,7 @@ p {
 
 @media only screen and (min-width: 800px) {
   .images-page {
-    margin-top: 200px;
+    margin-top: 150px;
   }
 }
 
@@ -513,7 +546,7 @@ p {
 .slider-address-image {
   width: 150px;
   height: 150px;
-  background-color: #d4d5d6;
+  background-color: #dadada;
   border-radius: 50%;
 }
 
@@ -547,30 +580,46 @@ p {
   padding-top: 50px;
   display: flex;
   flex-direction: column;
+  width: 100%;
+  max-width: 980px;
+  margin: auto;
 }
 
 input, textarea {
   font-size: 1rem;
-  padding: 5px;
+  padding: 10px;
   margin: 10px 0;
-  border: 1px solid #d4d5d6;
+  border: 1px solid #dadada;
+  min-width: 100%;
+  outline: none;
+  border-radius: 2px;
+}
+
+input:active, input:focus, textarea:active, textarea:focus {
+  border-color: #637d37;
 }
 
 textarea {
   min-height: 100px;
-  max-width: 100%;
+  width: 980px;
 }
 
 button {
   font-size: 1rem;
   font-weight: bold;
-  padding: 5px;
+  padding: 0px 8px;
   margin: 10px 0;
+  color: white;
   width: 100px;
-  height: 50px;
+  height: 45px;
   border-radius: 25px;
-  background-color: #d4d5d6;
+  background-color: #637d37;
   border: none;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: darkolivegreen;
 }
 
 #map {
@@ -579,7 +628,7 @@ button {
   max-height: 75vw;
   width: 100vw;
   margin: 0 -10vw;
-  background-color: #d4d5d6;
+  background-color: #dadada;
 }
 
 footer {
@@ -594,7 +643,7 @@ footer {
     margin: 0 -10vw;
     align-items: center;
     justify-content: center;
-    background-color: #d4d5d6;
+    background-color: #dadada;
     padding: 30px 0;
   }
 }
@@ -627,6 +676,7 @@ footer address:first-of-type {
   transition-duration: 0.6s;
   transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
   will-change: color;
+  transition-duration: 200ms;
 }
 
 .social:hover, .social:active {
