--- a/css/style.scss
+++ b/css/style.scss
@@ -24,15 +24,16 @@ body {
   margin     : auto;
   font-size  : 16px;
   line-height: 1.5rem;
-  // margin-bottom   : 50pt;
+  margin-bottom   : 50pt;
   background-color: $white;
   // overflow-y: hidden;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: calc(100vh - 100px);
 
   @include min800 {
-    // margin-bottom: auto;
+    margin-top:  105px;
+    margin-bottom: 0;
   }
 }
 
