--- a/css/modules/_footer.scss
+++ b/css/modules/_footer.scss
@@ -10,13 +10,21 @@ footer {
     align-items     : center;
     justify-content : center;
     background-color: $grey50 ;
-    padding: 30px 0;
+    padding: 60px 0;
   }
+   h3      { margin-bottom: 10px;}
+  .location{ margin-top   : 15px;}
 
   address{
     width: 100%;
     &:first-of-type{margin-right: 40px;}
   }
+
+  a:hover{
+    cursor: pointer;
+    color: $green;
+  }
+
 }
 
 .contact {
@@ -36,6 +44,6 @@ footer {
   @include transition(color);
   transition-duration: 200ms;
   &:hover, &:active {
-    color: $green40;
+    color: $green;
   }
 }
