--- a/css/style.css
+++ b/css/style.css
@@ -295,7 +295,7 @@ p {
 
 .about img {
   max-height: 100px;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
 .intro {
@@ -360,29 +360,29 @@ p {
 }
 
 .products [class*="svg-"] {
-  margin: 10px;
+  margin: 0px;
   display: flex;
   flex-shrink: 0;
   align-items: center;
   border-radius: 50%;
+  background-color: white;
   justify-content: center;
+  overflow: hidden;
   background-size: cover;
   width: 250px;
   height: 250px;
-  transition-property: background-color;
+  transition-property: background-size;
   transition-duration: 0.6s;
   transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
-  will-change: background-color;
-}
-
-.products [class*="svg-"]:hover, .products [class*="svg-"]:active {
-  background-color: #c6d9a8;
+  will-change: background-size;
 }
 
 @media only screen and (min-width: 800px) {
   .products [class*="svg-"] {
     width: calc((70vw - 60px)/3);
     height: calc((70vw - 60px)/3);
+    max-width: 350px;
+    max-height: 350px;
   }
 }
 
@@ -390,11 +390,28 @@ p {
   color: #637d37;
   margin: 0 -5px;
   padding: 20px 0;
-  width: calc(100% + 10px);
+  width: calc(100% + 0px);
   text-align: center;
   font-weight: bold;
   text-transform: uppercase;
   background-color: white;
+}
+
+.border {
+  padding: 3px;
+  border-radius: 50%;
+  margin: 15px;
+  background: linear-gradient(to right, #637d37, #dece25);
+  overflow: hidden;
+}
+
+[class*="svg-"]:hover {
+  cursor: pointer;
+}
+
+[class*="svg-"]:hover h2 {
+  background: linear-gradient(to right, #637d37, #dece25);
+  color: white;
 }
 
 .product-page {
@@ -577,7 +594,7 @@ p {
 }
 
 .contact-form {
-  padding-top: 50px;
+  padding: 60px 0;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -644,8 +661,16 @@ footer {
     align-items: center;
     justify-content: center;
     background-color: #dadada;
-    padding: 30px 0;
+    padding: 60px 0;
   }
+}
+
+footer h3 {
+  margin-bottom: 10px;
+}
+
+footer .location {
+  margin-top: 15px;
 }
 
 footer address {
@@ -654,6 +679,11 @@ footer address {
 
 footer address:first-of-type {
   margin-right: 40px;
+}
+
+footer a:hover {
+  cursor: pointer;
+  color: #637d37;
 }
 
 .contact {
@@ -680,5 +710,5 @@ footer address:first-of-type {
 }
 
 .social:hover, .social:active {
-  color: #c6d9a8;
+  color: #637d37;
 }
