--- a/css/style.scss
+++ b/css/style.scss
@@ -57,9 +57,12 @@ p {
   left: 0;
   z-index: 20;
 }
-
+//todo: check if this works across different devices
 .avoid-scroll{
   overflow:hidden;
+  position: fixed;
+  top:0;
+  left: 38px;
 }
 
 //modules
