--- a/css/style.scss
+++ b/css/style.scss
@@ -47,6 +47,7 @@ p {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .overlay{
@@ -73,3 +74,4 @@ p {
 @import 'modules/images';
 @import 'modules/contact';
 @import 'modules/footer';
+@import 'modules/popup';
