--- a/css/modules/_productItem.scss
+++ b/css/modules/_productItem.scss
@@ -2,6 +2,8 @@
 
 .product-page {
   display: flex;
+  position: relative;
+  width: 100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -32,6 +34,11 @@
   display: grid;
   grid-template-rows: 200px 40px;
   cursor: pointer;
+
+  &:hover img {
+    opacity: 0.7;
+  }
+  
   img, h3 {
     max-height: 100%;
     max-width: 100%;
