--- a/css/style.css
+++ b/css/style.css
@@ -434,6 +434,8 @@ p {
 
 .product-page {
   display: flex;
+  position: relative;
+  width: 100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -470,6 +472,10 @@ p {
   display: grid;
   grid-template-rows: 200px 40px;
   cursor: pointer;
+}
+
+.product-item:hover img {
+  opacity: 0.7;
 }
 
 .product-item img, .product-item h3 {
