--- a/css/style.scss
+++ b/css/style.scss
@@ -54,16 +54,12 @@ p {
   @include size(100vw, 100vh);
   background:  rgba(0,0,0,0.4);
   position: fixed;
-  top:0;
-  left: 0;
-  z-index: 20;
+  @include position;
 }
-//todo: check if this works across different devices
+//TODO: check if this works across different devices
 .avoid-scroll{
-  overflow:hidden;
   position: fixed;
-  top:0;
-  left: 38px;
+  @include position;
 }
 
 //modules
