--- a/css/modules/_productItem.scss
+++ b/css/modules/_productItem.scss
@@ -18,6 +18,19 @@
   }
   &-title {
     margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+
+    &::before, &::after {
+      content: '';
+      background-color: $green40;
+      height: 1px;
+      flex: 1;
+      margin: 0 10px;
+    }
   }
 }
 
@@ -38,7 +51,7 @@
   &:hover img {
     opacity: 0.7;
   }
-  
+
   img, h3 {
     max-height: 100%;
     max-width: 100%;
