--- a/css/style.css
+++ b/css/style.css
@@ -458,6 +458,19 @@ p {
 
 .product-page-title {
   margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+}
+
+.product-page-title::before, .product-page-title::after {
+  content: '';
+  background-color: #c6d9a8;
+  height: 1px;
+  flex: 1;
+  margin: 0 10px;
 }
 
 .product-list {
