Contact slider for small screens adjusted with scroll option

--- a/css/modules/_images.scss
+++ b/css/modules/_images.scss
@@ -16,6 +16,21 @@
     }
     &-title {
       margin-bottom: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      width: 100%;
+
+      &::before, &::after {
+        content: '';
+        background-color: $green40;
+        height: 1px;
+        flex: 1;
+      }
+
+      &::before { margin-right: 15px; }
+      &::after { margin-left: 15px; }
     }
   }
 
