--- a/css/modules/_contact.scss
+++ b/css/modules/_contact.scss
@@ -4,10 +4,11 @@
 .slider {
   &-contact {
     @include size(100%, auto);
+    max-height: 100vh;
     background-color: $green;
     border-top-left-radius:   10px;
     border-top-right-radius:  10px;
-    position:         fixed;
+    position:         absolute;
     bottom:           0;
     left:             0;
     transform: translateY(200vh);
@@ -16,6 +17,12 @@
     padding-top:      40px;
     text-transform:   none;
     font-size:        1rem;
+    display: flex;
+    flex-direction: column;
+
+    &-container {
+      overflow-x: scroll;
+    }
   }
 
   &-address {
@@ -24,6 +31,23 @@
     display:          flex;
     flex-direction:   row;
     @include size(100%, auto);
+
+    &-name {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      width: 100%;
+
+      &::before, &::after {
+        content: '';
+        background-color: $green40;
+        height: 1px;
+        flex: 1;
+      }
+      &::before { margin-right: 15px; }
+      &::after { margin-left: 15px; }
+    }
 
     &-image {
       @include size(150px, auto);
