--- a/css/modules/_popup.scss
+++ b/css/modules/_popup.scss
@@ -4,15 +4,59 @@
   &-cover{
     position: fixed;
     top: 0;
-    bottom: 0;
+    bottom: 80px;
     left: 0;
     right: 0;
     background-color: rgba($grey, .6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @include min800 {
+      bottom: 0;
+    }
   }
 
   &-container {
     margin: 120px 30px;
     background-color: $white;
     padding: 30px;
+    border-radius: 5px;
+    color: $green80;
+    max-width: 400px;
+
+    button {
+      width: 100%;
+      margin-top: 30px;
+      margin-bottom: 0;
+    }
+
+    h3:not(:first-child){
+      margin-top: 30px;
+    }
+
+    p {
+      margin-top: 5px;
+      color: $green;
+      font-weight: bold;
+
+    }
+  }
+
+  &-title {
+    color: $green;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+
+    &::before, &::after {
+      content: '';
+      background-color: $green40;
+      height: 1px;
+      flex: 1;
+    }
+    &::before { margin-right: 15px; }
+    &::after { margin-left: 15px; }
   }
 }
