--- a/css/modules/_header.scss
+++ b/css/modules/_header.scss
@@ -127,45 +127,68 @@
 
 .logo {
   display: none;
+  padding: 4px;
   z-index: 99;
   @include size ($logoDia, $logoDia);
   flex-shrink  : 0;
   border-radius: 50%;
   align-self   : flex-start;
-  background   : $white;
+  justify-content: center;
+  align-items: center;
+  // background   : $white;
   position: relative;
   @include transition;
 
-  svg { width: 100%}
-
-  @include min800 {
-    display: inherit;
+  svg {
+    border-radius: 50%;
+    background-color: $white;
+    width: 100%
   }
 
-  &:before{
+  @include min800 {
+    display: flex;
+  }
+
+  &::before{
     @include transition(opacity);
     transition-delay: 200ms;
     content: '';
     width: 100%;
     height: 50%;
-    left: 0.5px;
-    top:50%;
+    top: 50%;
     box-shadow: 0 -2px 14px 2px rgba(0,0,0,0.2);
     position: absolute;
-    border-radius: 0 0 40pc 40pc;
-    z-index: -1;
+    border-radius: 0 0 calc(#{$logoDia} / 2) calc(#{$logoDia} / 2);
+    z-index: -2;
+  }
+
+  &::after {
+    @include transition(opacity);
+    content: '';
+    position: absolute;
+    @include size(100%, 100%);
+    background: $white;
+    border-radius: 50%;
+    @include position;
+    z-index:-1;
   }
 }
 
 .scroll-logo{
   transform: translateY(-70px);
   background: transparent;
+  svg { background-color: inherit;}
   svg > *{ opacity: 0 }
-  .cls-2 {opacity: 1  }
-  &:before{
+  .logo-cultiva {opacity: 1  }
+  &::before{
     transition: none;
     transform: translateY(-300px);
-    opacity: 0!important}
+    opacity: 0!important;
+  }
+
+  &::after {
+    opacity: 0;
+  }
 }
 
 .on-page {
